--- a/contribute.html
+++ b/contribute.html
@@ -125,6 +125,7 @@ h3 {
 
 
 
+
       <a class="menu" href="docs.html">docs</a>&nbsp; |&nbsp;&nbsp; <a
         style="text-decoration: overline; color: black;" class="menu"
         href="contribute.html">contribute</a>&nbsp; |&nbsp;&nbsp; <a
@@ -171,11 +172,13 @@ h3 {
           </th>
           <td>
             <ul>
-              <li>Multiple 3D sheets in a pys file (started)</li>
-              <li>Attribute editing from menu (not started)</li>
-              <li>Chart dialog (started)</li>
+              <li>Suggest additional chart types</li>
+              <li>Create an interface for multiple 3D sheets in a pys
+                file</li>
+              <li>Add attribute editing to the menu</li>
               <li>Translation to your language (see <a
                   href="http://translationproject.org/domain/pyspread.html">translation
+
 
                   project page</a>, <a
                   href="http://translationproject.org/html/translators.html">howto</a>)<br>
@@ -216,13 +219,19 @@ h3 {
           <td style="vertical-align: top;">
             <meta http-equiv="CONTENT-TYPE" content="text/html;
               charset=UTF-8">
-            <p class="western" style="margin-bottom: 0in" lang="en-US">This
+            <p class="western" style="margin-bottom: 0in;" lang="en-US">This
 
 
 
-              information refers to pyspread v. 0.2.2. <br>
+
+              information refers to pyspread v. 0.2.3. The image on the
+              right refers to v. 0.2.2. Therefore, it is missing the
+              module chart_dialog.py, which implements the chart editing
+              diaog.</p>
+            <p class="western" style="margin-bottom: 0in" lang="en-US">
               Version 0.1.2 and previous have a different structure.</p>
             <p class="western" style="margin-bottom: 0in;" lang="en-US">The
+
 
 
 
@@ -299,6 +308,7 @@ related
 
 
 
+
               code can be found </p>
             <ul>
               <li>
@@ -346,10 +356,11 @@ related
 
 
 
+
               latter is necessary in order to use the wx constants in
               config.py</p>
             <p class="western" style="margin-bottom: 0in" lang="en-US"><br>
-              PyMe related code can be found in lib/gpg.py</p>
+              python-gnupg related code can be found in lib/gpg.py</p>
             <p class="western" style="margin-bottom: 0in" lang="en-US"><br>
               numpy related code can be found in model/model.py</p>
             <p></p>
@@ -385,10 +396,11 @@ related
 
 
 
+
             Martin Manns</font></small><font size="-1"><br>
           Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
             style="font-style: italic;">
         </font> </span><font size="-1"><span style="font-style:
-          italic;">Last changed: 05. December 2012 </span></font></p>
+          italic;">Last changed: 13. January 2013 </span></font></p>
   </body>
 </html>
