--- a/download.html
+++ b/download.html
@@ -121,6 +121,7 @@ h3 {
       |&nbsp;&nbsp; <a class="menu" href="docs.html">docs</a>&nbsp;
       |&nbsp;&nbsp; <a class="menu" href="contribute.html">contribute</a>&nbsp;
 
+
       |&nbsp;&nbsp; <a class="menu"
         href="https://github.com/manns/pyspread/issues" target="_blank">bugs</a><a
         class="menu" href="http://pyspread.wiki.sourceforge.net/"
@@ -134,23 +135,32 @@ h3 {
             width: 102px;">latest<br>
           </th>
           <td style="vertical-align: top;"><a
-              href="https://github.com/downloads/manns/pyspread/pyspread-0.2.2.tar.gz">version
+href="http://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.3.tar.gz#md5=c1f5fbb05f6b64cacfb49db5c38a80e1">version
 
-              0.2.2</a><br>
+
+              0.2.3</a><br>
           </td>
         </tr>
         <tr>
           <th style="vertical-align: top; width: 102px;">previous</th>
           <td style="vertical-align: top;"><a
+              href="https://github.com/downloads/manns/pyspread/pyspread-0.2.2.tar.gz">version
+
+
+              0.2.2</a><br>
+            <a
               href="https://github.com/downloads/manns/pyspread/pyspread-0.2.1.tar.gz">version
+
 
               0.2.1</a><br>
             <a
               href="https://github.com/downloads/manns/pyspread/pyspread-0.2.0.tar.gz">version
 
+
               0.2.0</a><br>
             <a
               href="https://github.com/downloads/manns/pyspread/pyspread-0.1.2.tar.gz">version
+
 
               0.1.2</a> (latest Windows compatible version)<br>
           </td>
@@ -159,9 +169,7 @@ h3 {
           <th style="vertical-align: top; width: 102px;">Other sites<br>
           </th>
           <td style="vertical-align: top;"><a
-href="http://pypi.python.org/pypi?:action=search&amp;term=pyspread&amp;submit=search">Python
-
-              package index</a><br>
+              href="http://sourceforge.net/projects/pyspread/">SourceForge</a><br>
           </td>
         </tr>
         <tr>
@@ -222,11 +230,12 @@ href="http://pypi.python.org/pypi?:action=search&amp;term=pyspread&amp;submit=se
     <p> </p>
     <p><span style="font-style: italic;"><small>C<font size="-1">opyright
 
+
             Martin Manns</font></small><font size="-1"><br>
           Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
             style="font-style: italic;">
         </font> </span><font size="-1"><span style="font-style:
-          italic;">Last changed: 11. April 2012 </span></font></p>
+          italic;">Last changed: 13. January 2013 </span></font></p>
     <p><span style="font-style: italic;"><small></small></span></p>
     <p> <a href="http://validator.w3.org/check?uri=referer"><br>
       </a> </p>
