--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@ h3 {
     <!-- Title -->
     <div style="float: left; width: 80px; height: 80px;"><img
         src="images/pyspread.png" style="margin-left: 15px;
-        margin-right: 30px; margin-top: 10px;" alt="Logo" width="44"
-        height="57"></div>
+        margin-right: 30px; margin-top: 10px;" alt="Logo" height="57"
+        width="44"></div>
     <div style="width: 400px; height: 80px;">
       <h1 id="title">pyspread</h1>
       <h3>Python power for your tables</h3>
@@ -120,6 +120,7 @@ h3 {
       |&nbsp; <a class="menu" href="download.html">download</a>&nbsp;
       |&nbsp;&nbsp; <a class="menu" href="docs.html">docs</a>&nbsp;
       |&nbsp;&nbsp; <a class="menu" href="contribute.html">contribute</a>&nbsp;
+
 
 
 
@@ -182,9 +183,10 @@ h3 {
                   calculations via <a
                     href="http://docs.python.org/library/decimal.html">decimal</a>
                 </li>
-                <li>Advanced statistics and plotting via <a
-                    href="http://rpy.sourceforge.net/">RPy</a></li>
+                <li>Advanced plotting via <a
+                    href="http://matplotlib.org/">matplotlib</a></li>
                 <li>Much more via <span style="font-style: italic;">&lt;your
+
 
 
                     favorite module&gt;</span></li>
@@ -204,21 +206,34 @@ h3 {
         <tr>
           <th style="vertical-align: top;">news<br>
           </th>
-          <td style="vertical-align: top; text-align: left;">April 2012:
-            Pyspread version 0.2.2 has been <a
+          <td style="vertical-align: top; text-align: left;">January
+            2013: Pyspread 0.2.3 is out. Get it <a
+href="http://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.3.tar.gz#md5=c1f5fbb05f6b64cacfb49db5c38a80e1">here</a>.
+            <div style="margin-left: 40px;"><br>
+              New features:<br>
+              <ul>
+                <li>Matplotlib charts</li>
+                <li>Image display in cells</li>
+                <li>Localization in German, Dutch, Danish and Ukrainian
+                  <br>
+                </li>
+                <li>Migration away from the PyMe dependency<br>
+                </li>
+              </ul>
+            </div>
+            April 2012: Pyspread version 0.2.2 has been <a
               href="http://packages.debian.org/testing/python/pyspread">uploaded
 
 
 
+
               to Debian</a> by Andreas Noteng. Many thanks to him for
-            packaging. It is now installable in Debian unstable using
-            "apt-get install pyspread". <a
+            packaging. It is now installable in Debian testing and in
+            unstable using "apt-get install pyspread". <a
               href="http://packages.ubuntu.com/quantal/pyspread">Pyspread
-              is available in Ubuntu</a> in release 12.10 Quantal
+
+              is also available in Ubuntu</a> in release 12.10 Quantal
             Quetzal.<br>
-            <br>
-            April 2012: Pyspread 0.2.2 is out. Get it from <a
-              href="https://github.com/downloads/manns/pyspread/pyspread-0.2.2.tar.gz">here</a>.<br>
           </td>
           <td style="vertical-align: top;"><br>
           </td>
@@ -240,21 +255,20 @@ href="http://pypi.python.org/packages/source/p/pyspread/pyspread-0.1.2.tar.gz#md
             <br>
             <span style="text-decoration: underline;">Dependencies </span><br>
             <ul>
-              <li><a href="http://www.python.org/">Python</a> &gt;=2.7
-                &lt;3.0 </li>
-              <li><a href="http://numpy.scipy.org/">numpy</a> &gt;=1.1.0</li>
+              <li><a href="http://www.python.org/">Python</a> (&gt;=2.7,
+                &lt;3.0)</li>
+              <li><a href="http://numpy.scipy.org/">numpy</a>
+                (&gt;=1.1.0)</li>
               <li><a href="http://www.wxpython.org/">wxPython</a>
-                &gt;=2.8.10.1 (Unicode version required)</li>
-              <li><a href="http://pyme.sourceforge.net/">PyMe</a>
-                &gt;=0.8.1</li>
+                (&gt;=2.8.10.1, Unicode version required)</li>
+              <li><a href="http://matplotlib.org/">matplotlib</a>
+                (&gt;=1.1.1)<br>
+              </li>
+              <li><a href="http://code.google.com/p/python-gnupg/">python-gnupg</a>
+                (&gt;=0.3.0)<br>
+              </li>
             </ul>
-            <span style="text-decoration: underline;">Highly recommended
-              for full functionality of the example files </span><br>
             <ul>
-              <li><a href="http://code.google.com/p/gmpy/">gmpy</a>
-                &gt;=1.1.0</li>
-              <li><a href="http://rpy.sourceforge.net/">rpy</a>
-                &gt;=1.0.3</li>
             </ul>
           </td>
           <td style="vertical-align: top;"><br>
@@ -297,12 +311,12 @@ href="http://pypi.python.org/packages/source/p/pyspread/pyspread-0.1.2.tar.gz#md
 
 
 
+
             Martin Manns</font></small><font size="-1"><br>
           Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
             style="font-style: italic;">
         </font></span><font size="-1"><span style="font-style: italic;">Last
 changed:
-
-          25. October 2012 </span></font></p>
+          13. January 2013 </span></font></p>
   </body>
 </html>
