numpy link updated

--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@ h3 {
 
 
 
+
       |&nbsp;&nbsp; <a class="menu"
         href="https://github.com/manns/pyspread/issues" target="blank">bugs</a>
     </div>
@@ -178,7 +179,7 @@ h3 {
               <li>Python module access, which allows:</li>
               <ul>
                 <li>Matrix operations via <a
-                    href="http://numpy.scipy.org/">numpy</a></li>
+                    href="http://www.numpy.org/">numpy</a></li>
                 <li>Fixed point decimal numbers for business
                   calculations via <a
                     href="http://docs.python.org/library/decimal.html">decimal</a>
@@ -186,6 +187,7 @@ h3 {
                 <li>Advanced plotting via <a
                     href="http://matplotlib.org/">matplotlib</a></li>
                 <li>Much more via <span style="font-style: italic;">&lt;your
+
 
 
 
@@ -227,10 +229,12 @@ href="http://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.3.tar.gz#md
 
 
 
+
               to Debian</a> by Andreas Noteng. Many thanks to him for
             packaging. It is now installable in Debian testing and in
             unstable using "apt-get install pyspread". <a
               href="http://packages.ubuntu.com/quantal/pyspread">Pyspread
+
 
               is also available in Ubuntu</a> in release 12.10 Quantal
             Quetzal.<br>
@@ -257,8 +261,7 @@ href="http://pypi.python.org/packages/source/p/pyspread/pyspread-0.1.2.tar.gz#md
             <ul>
               <li><a href="http://www.python.org/">Python</a> (&gt;=2.7,
                 &lt;3.0)</li>
-              <li><a href="http://numpy.scipy.org/">numpy</a>
-                (&gt;=1.1.0)</li>
+              <li><a href="http://www.numpy.org/">numpy</a> (&gt;=1.1.0)</li>
               <li><a href="http://www.wxpython.org/">wxPython</a>
                 (&gt;=2.8.10.1, Unicode version required)</li>
               <li><a href="http://matplotlib.org/">matplotlib</a>
@@ -312,11 +315,13 @@ href="http://pypi.python.org/packages/source/p/pyspread/pyspread-0.1.2.tar.gz#md
 
 
 
+
             Martin Manns</font></small><font size="-1"><br>
           Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
             style="font-style: italic;">
         </font></span><font size="-1"><span style="font-style: italic;">Last
 changed:
+
           13. January 2013 </span></font></p>
   </body>
 </html>
