--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@ h3 {
 
 
 
+
       |&nbsp;&nbsp; <a class="menu"
         href="https://github.com/manns/pyspread/issues" target="blank">bugs</a>
     </div>
@@ -191,6 +192,7 @@ h3 {
 
 
 
+
                     favorite module&gt;</span></li>
               </ul>
             </ul>
@@ -208,8 +210,12 @@ h3 {
         <tr>
           <th style="vertical-align: top;">news<br>
           </th>
-          <td style="vertical-align: top; text-align: left;">January
-            2013: Pyspread 0.2.3 is out. Get it <a
+          <td style="vertical-align: top; text-align: left;">February
+            2013: Pyspread 0.2.3 has been packaged for Debian by by
+            Andreas Noteng. Get it <a
+              href="http://manns.github.com/pyspread/deb/pyspread_0.2.3-1_all.deb">here</a>.<br>
+            <br>
+            January 2013: Pyspread 0.2.3 is out. Get it <a
 href="http://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.3.tar.gz#md5=c1f5fbb05f6b64cacfb49db5c38a80e1">here</a>.
             <div style="margin-left: 40px;"><br>
               New features:<br>
@@ -230,10 +236,12 @@ href="http://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.3.tar.gz#md
 
 
 
+
               to Debian</a> by Andreas Noteng. Many thanks to him for
             packaging. It is now installable in Debian testing and in
             unstable using "apt-get install pyspread". <a
               href="http://packages.ubuntu.com/quantal/pyspread">Pyspread
+
 
 
               is also available in Ubuntu</a> in release 12.10 Quantal
@@ -316,12 +324,14 @@ href="http://pypi.python.org/packages/source/p/pyspread/pyspread-0.1.2.tar.gz#md
 
 
 
+
             Martin Manns</font></small><font size="-1"><br>
           Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
             style="font-style: italic;">
         </font></span><font size="-1"><span style="font-style: italic;">Last
 changed:
 
-          13. January 2013 </span></font></p>
+
+          13. February 2013 </span></font></p>
   </body>
 </html>
