Updated deb package by Andreas Noteng mentioned at Web site

--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@ h3 {
         <tr>
           <th style="vertical-align: top;">news<br>
           </th>
-          <td style="vertical-align: top; text-align: left;">February
-            2013: Pyspread 0.2.3 has been packaged for Debian by by
+          <td style="vertical-align: top; text-align: left;">April
+            2013: The Debian package of pyspread 0.2.3 has been updated by
             Andreas Noteng. Get it <a
               href="http://manns.github.com/pyspread/deb/pyspread_0.2.3-1_all.deb">here</a>.<br>
             <br>
