--- a/test.html
+++ b/test.html
@@ -115,7 +115,7 @@ h3 {
       <h3>Python power for your tables</h3>
     </div>
 
-    {% include test_menu.html %}
+    {% include test_menu.md %}
     
     <div style="text-align: left;">
       <style type="text/css">p { margin-bottom: 0.08in; }p.western {  }p.cjk { font-size: 10pt; }</style></div>
