--- a/test.html
+++ b/test.html
@@ -1,9 +1,7 @@
-<!--
 ---
 layout: default
-title: First steps into pyspread
+title: first steps
 ---
--->
 
     <div style="float: right;"> <a
         href="http://sourceforge.net/projects/pyspread"><br>
