--- a/test.html
+++ b/test.html
@@ -1,34 +1,8 @@
 ---
-layout: default
-title: first steps
+layout: default_docs
+title: First steps
 ---
 
-    <div style="float: right;"> <a
-        href="http://sourceforge.net/projects/pyspread"><br>
-      </a></div>
-    <!-- Title -->
-    <div style="float: left; width: 80px; height: 80px;"><img
-        src="images/pyspread.png" style="margin-left: 15px;
-        margin-right: 30px; margin-top: 10px;" alt="Logo" height="57"
-        width="44"></div>
-    <div style="width: 400px; height: 80px;">
-      <h1 id="title">pyspread</h1>
-      <h3>Python power for your tables</h3>
-    </div>
-    <!-- Menu -->
-    <div id="menu"><a class="menu" href="index.html">home</a>&nbsp;
-      |&nbsp;&nbsp; <a class="menu" href="news.html"></a><a
-        class="menu" href="download.html">download</a>&nbsp;
-      |&nbsp;&nbsp; <a style="text-decoration: overline; color: black;"
-        class="menu" href="docs.html">docs</a>&nbsp; |&nbsp;&nbsp; <a
-        class="menu" href="contribute.html">contribute</a>&nbsp;
-      |&nbsp;&nbsp; <a class="menu"
-        href="https://github.com/manns/pyspread/issues" target="_blank">bugs</a><a
-        class="menu" href="http://pyspread.wiki.sourceforge.net/"
-        target="_blank"></a> </div>
-    <p> </p>
-    <div style="text-align: left;">
-      <style type="text/css">p { margin-bottom: 0.08in; }p.western {  }p.cjk { font-size: 10pt; }</style></div>
     <h1>
       <p style="margin-top: 0.17in; page-break-after: avoid; text-align:
         left;"><font face="Liberation Sans"><font size="5"><b>First
