--- a/docs.html
+++ b/docs.html
@@ -181,9 +181,7 @@ data.</a><br>
     </tr>
   </tbody>
 </table>
-<p><span style="font-style: italic;"><small>C<font size="-1">opyright
-2008-2012 Martin
-Manns</font></small><font size="-1"><br>
+<p><span style="font-style: italic;"><small>Copyright Martin Manns</font></small><font size="-1"><br>
 Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
  style="font-style: italic;">
 </font>
