--- a/First steps.html
+++ b/First steps.html
@@ -1,6 +1,7 @@
 ---
-layout: default_docs
+layout: default
 title: First steps into pyspread
+menu: docs
 ---
 
 {% include content/first_steps.html %}
