--- a/index.html
+++ b/index.html
@@ -1,337 +1,7 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html>
-  <head>
-    <title>Pyspread</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="Author" content="Martin Manns">
-    <meta name="description" content="Pyspread is a cross-platform
-      Python spreadsheet.">
-    <meta name="keywords" content="pyspread, spreadsheet, python, python
-      spreadsheet, numpy, wxpython, csv, data mining">
-    <style type="text/css">
-<!--
-body
-{
-background-color:#ffffff;
-}
+---
+layout: default
+title: Pyspread
+menu: main
+---
 
-h1: {font-size: 28}
-
-a:link, a:visited, a:active, a:hover
-{
-text-decoration:underline;
-font-weight:bold;
-color:#777777;
-}
-a:active, a:hover
-{
-color:#000000;
-}
-a.menu:link, a.menu:visited
-{
-color:#777777;
-}
-a.menu:active, a.menu:hover
-{
-color:#000000;
-}
-
-/* Title box */
-#title {
-font-size:28px;
-font-weight:bold;
-padding-top:0px;
-height:28px;
-margin: 15;
-}
-
-/* Menu */
-#menu {
-color:#000000;
-text-align:center;
-padding:10px 0px;
-border-top:1px solid #999999;
-border-bottom:1px solid #999999;
-clear:left;
-}
-
-/* Content */
-#content {
-border:1px solid #000000;
-background-color:#f2f2f2;
-padding:5px 15px;
-color:#000000;
-}
-
-//--></style><!-- SF Logo -->
-    <meta content="text/html; charset=UTF-8" http-equiv="content-type">
-    <style type="text/css">
-th {
-  font-size: large;
-  font-weight: bold;
-  text-transform: lowercase;
-  font-family: Arial,Helvetica,sans-serif;
-  margin-top: 0.5em;
-  background-attachment: fixed;
-  text-decoration: overline;
-}
-td {
-  font-family: Arial,Helvetica,sans-serif;
-  font-weight: lighter;
-  font-style: normal;
-  text-align: justify;
-  line-height: 1.3em;
-}
-h1 {
-  font-family: Arial,Helvetica,sans-serif;
-  font-size: 2em;
-  font-weight: bold;
-}
-h3 {
-  font-family: Arial,Helvetica,sans-serif;
-  font-weight: normal;
-  font-style: normal;
-  text-transform: none;
-  text-align: left;
-  font-size: 1em;
-}
-#menu {
-  font-family: Arial,Helvetica,sans-serif;
-}
-
-  </style>
-  </head>
-  <body>
-    <div style="float: right;"> <a
-        href="http://sourceforge.net/projects/pyspread"><br>
-      </a></div>
-    <!-- Title -->
-    <div style="float: left; width: 80px; height: 80px;"><img
-        src="images/pyspread.png" style="margin-left: 15px;
-        margin-right: 30px; margin-top: 10px;" alt="Logo" height="57"
-        width="44"></div>
-    <div style="width: 400px; height: 80px;">
-      <h1 id="title">pyspread</h1>
-      <h3>Python power for your tables</h3>
-    </div>
-    <!-- Menu -->
-    <div id="menu"><a href="index.html" class="menu" style="font-weight:
-        bold; color: black; text-decoration: overline;">home</a>&nbsp;
-      |&nbsp; <a class="menu" href="download.html">download</a>&nbsp;
-      |&nbsp;&nbsp; <a class="menu" href="docs.html">docs</a>&nbsp;
-      |&nbsp;&nbsp; <a class="menu" href="contribute.html">contribute</a>&nbsp;
-
-
-
-
-
-
-
-
-
-      |&nbsp;&nbsp; <a class="menu"
-        href="https://github.com/manns/pyspread/issues" target="blank">bugs</a>
-    </div>
-    <p> </p>
-    <table style="text-align: left; width: 100%; margin-left: auto;
-      margin-right: auto;" border="0" cellpadding="15" cellspacing="0">
-      <tbody>
-        <tr>
-          <th style="vertical-align: top; background-color: white;
-            width: 102px;">About<br>
-          </th>
-          <td style="vertical-align: top;">Pyspread is a non-traditional
-            spreadsheet application that is based on and written in the
-            programming language <a href="http://www.python.org/">Python</a>.
-            <br>
-            <br>
-            The goal of pyspread is to be the most pythonic spreadsheet.<br>
-            <br>
-            Pyspread expects Python expressions in its grid cells, which
-            makes a spreadsheet specific language obsolete. Each cell
-            returns a Python object that can be accessed from other
-            cells. These objects can represent anything including lists
-            or matrices.<br>
-            <br>
-            Pyspread is free software. It is released under the <a
-              href="http://www.gnu.org/copyleft/gpl.html">GPL v3</a>.<br>
-          </td>
-          <td style="vertical-align: top;"><br>
-          </td>
-          <td style="width: 211px;"><a
-              href="images/screenshot_main_window_0.2.0.png"><img
-                alt="Pyspread main window"
-                src="images/screenshot_main_window_0.2.0_preview.png"
-                style="border: 0px solid ; width: 200px; height: 154px;"></a><br>
-          </td>
-        </tr>
-        <tr>
-          <th style="vertical-align: top; width: 102px;">Features<br>
-          </th>
-          <td style="vertical-align: top;">
-            <ul style="text-align: left;">
-              <li> Three dimensional grid with up to 80 million rows<br>
-              </li>
-              <li>Macros</li>
-              <li>CSV import and export</li>
-              <li>Save file signatures for preventing foreign code
-                execution <br>
-              </li>
-              <li>Python module access, which allows:</li>
-              <ul>
-                <li>Matrix operations via <a
-                    href="http://www.numpy.org/">numpy</a></li>
-                <li>Fixed point decimal numbers for business
-                  calculations via <a
-                    href="http://docs.python.org/library/decimal.html">decimal</a>
-                </li>
-                <li>Advanced plotting via <a
-                    href="http://matplotlib.org/">matplotlib</a></li>
-                <li>Much more via <span style="font-style: italic;">&lt;your
-
-
-
-
-
-                    favorite module&gt;</span></li>
-              </ul>
-            </ul>
-          </td>
-          <td style="vertical-align: top;"><br>
-          </td>
-          <td style="width: 211px;"><a
-              href="images/screenshot_sinus_large.png"><img
-                style="border: 0px solid ; width: 200px; height: 144px;"
-                alt="Pyspread screenshot"
-                src="images/screenshot_sinus_thumb.png"></a><br>
-            <a href="images/screenshot_fonts.png"><br>
-            </a> </td>
-        </tr>
-        <tr>
-          <th style="vertical-align: top;">news<br>
-          </th>
-          <td style="vertical-align: top; text-align: left;">April
-            2013: The Debian package of pyspread 0.2.3 has been updated by
-            Andreas Noteng. Get it <a
-              href="http://manns.github.com/pyspread/deb/pyspread_0.2.3-1_all.deb">here</a>.<br>
-            <br>
-            January 2013: Pyspread 0.2.3 is out. Get it <a
-href="http://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.3.tar.gz#md5=c1f5fbb05f6b64cacfb49db5c38a80e1">here</a>.
-            <div style="margin-left: 40px;"><br>
-              New features:<br>
-              <ul>
-                <li>Matplotlib charts</li>
-                <li>Image display in cells</li>
-                <li>Localization in German, Dutch, Danish and Ukrainian
-                  <br>
-                </li>
-                <li>Migration away from the PyMe dependency<br>
-                </li>
-              </ul>
-            </div>
-            April 2012: Pyspread version 0.2.2 has been <a
-              href="http://packages.debian.org/testing/python/pyspread">uploaded
-
-
-
-
-
-
-              to Debian</a> by Andreas Noteng. Many thanks to him for
-            packaging. It is now installable in Debian testing and in
-            unstable using "apt-get install pyspread". <a
-              href="http://packages.ubuntu.com/quantal/pyspread">Pyspread
-
-
-
-              is also available in Ubuntu</a> in release 12.10 Quantal
-            Quetzal.<br>
-          </td>
-          <td style="vertical-align: top;"><br>
-          </td>
-          <td style="vertical-align: top;"><br>
-          </td>
-        </tr>
-        <tr>
-          <th style="vertical-align: top; width: 102px;">Requirements<br>
-          </th>
-          <td style="vertical-align: top;">Pyspread is designed for
-            Linux and other GTK platforms.<br>
-            <br>
-            Due to time restrictions, Windows™ support has been
-            discontinued starting with version 0.2.0. If you run
-            Windows, get version 0.1.2 from <a
-href="http://pypi.python.org/packages/source/p/pyspread/pyspread-0.1.2.tar.gz#md5=501d9d2e150b5dc8a0f44ff303e4cb71">here</a>.
-            If you would like to maintain a Windows version please
-            contact me.<br>
-            <br>
-            <span style="text-decoration: underline;">Dependencies </span><br>
-            <ul>
-              <li><a href="http://www.python.org/">Python</a> (&gt;=2.7,
-                &lt;3.0)</li>
-              <li><a href="http://www.numpy.org/">numpy</a> (&gt;=1.1.0)</li>
-              <li><a href="http://www.wxpython.org/">wxPython</a>
-                (&gt;=2.8.10.1, Unicode version required)</li>
-              <li><a href="http://matplotlib.org/">matplotlib</a>
-                (&gt;=1.1.1)<br>
-              </li>
-              <li><a href="http://code.google.com/p/python-gnupg/">python-gnupg</a>
-                (&gt;=0.3.0)<br>
-              </li>
-            </ul>
-            <ul>
-            </ul>
-          </td>
-          <td style="vertical-align: top;"><br>
-          </td>
-          <td style="width: 211px;"><a
-              href="images/screenshot_wagner_large.png"><img
-                alt="Pyspread screenshot"
-                src="images/screenshot_wagner_thumb.png" style="border:
-                0px solid ; width: 200px; height: 144px;"></a> </td>
-        </tr>
-        <tr>
-          <th style="vertical-align: top;">contact<br>
-          </th>
-          <td style="vertical-align: top;">For user questions or
-            feedback please post to the pyspread-users mailing list by
-            sending an e-mail to <a
-              href="mailto:pyspread-users@gna.org">pyspread-users@gna.org</a>.
-            You can <a
-              href="https://mail.gna.org/listinfo/pyspread-users/">here</a>
-            subscribe to the list.<br>
-            <br>
-            For contributions, patches, development discussions and
-            ideas please post to the pyspread-dev mailing list by
-            sending an e-mail to <a href="mailto:pyspread-dev@gna.org">pyspread-dev@gna.org</a>.
-            You can <a
-              href="https://mail.gna.org/listinfo/pyspread-dev/">here</a>
-            subscribe to the list.</td>
-          <td style="vertical-align: top;"><br>
-          </td>
-          <td><br>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-    <p> </p>
-    <p><span style="font-style: italic;"><small>C<font size="-1">opyright
-
-
-
-
-
-
-
-
-
-            Martin Manns</font></small><font size="-1"><br>
-          Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
-            style="font-style: italic;">
-        </font></span><font size="-1"><span style="font-style: italic;">Last
-changed:
-
-
-          13. February 2013 </span></font></p>
-  </body>
-</html>
+{% include content/main.html %}
