--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Pyspread
-menu: main
+menu: home
 ---
 
-{% include content/main.html %}
+{% include content/home.html %}
