1st stept page fixed

--- a/First steps.html
+++ b/First steps.html
@@ -1,8 +1,8 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
   <head>
-
-    <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
+    <meta http-equiv="content-type" content="text/html;
+      charset=ISO-8859-1">
   </head>
   <body>
     <p></p>
@@ -113,8 +113,8 @@
               dependencies</span>
             <ul>
               <li> <a href="http://code.google.com/p/python-gnupg/">python-gnupg</a>
-                (&gt;=0.3.0, for opening own files without approval) <br>
-                (&gt;=0.3.0)</li>
+                (&gt;=0.3.0, for opening own files without approval)<br>
+              </li>
               <li><a href="http://www.python-excel.org/">xlrd</a>
                 (&gt;=0.9.2, for loading Excel<sup>&reg;</sup> files)</li>
               <li><a href="http://www.python-excel.org/">xlwt</a>
@@ -172,6 +172,7 @@
               <li>Download and install <a
                   href="http://www.wxpython.org/download.php#stable">wxPython
 
+
                   2.8.x</a>.</li>
               <li>Download and install gnupg (<a
                   href="http://www.gpg4win.org/">Gpg4win</a> supports
@@ -188,15 +189,11 @@
             be extracted (e. g. with 7zip) and installed as follows<br>
             <ul>
               <li>Log in as Administrator</li>
-              <li>
-                Start cmd </li>
-              <li>
-                cd to the extraction directory </li>
-              <li>
-                Type in</li>
+              <li> Start cmd </li>
+              <li> cd to the extraction directory </li>
+              <li> Type in</li>
               <li>python setup.py install&nbsp;</li>
-              <li>
-                Download and extract the pyspread tarball (e. g. with
+              <li> Download and extract the pyspread tarball (e. g. with
                 7zip)</li>
             </ul>
             <h4 class="western" lang="en-US">Other systems</h4>
@@ -555,6 +552,7 @@
           </td>
           <td style="vertical-align: top;">
             <h4 style="font-weight: bold;" class="western" lang="en-US">Entering
+
 
               data</h4>
             <p class="western" lang="en-US">Data is entered into the
