--- a/First steps.html
+++ b/First steps.html
@@ -288,7 +288,7 @@
           <td style="vertical-align: top;"> <a
               href="images/screenshot_main_window_0.2.0.png"><img
                 alt="Pyspread main window"
-                src="images/screenshot_main_window_0.2.0_preview.png"
+                src="images/screenshot_main_window_preview.png"
                 style="border: 0px solid ; width: 200px; height: 154px;"></a><br>
           </td>
         </tr>
@@ -1620,7 +1620,7 @@
     <p><span style="font-style: italic;"><small>Copyright Martin Manns</small><br>
         Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
           style="font-style: italic;">
-      </span> <span style="font-style: italic;">Last changed: 26. June
-        2014</span></p>
+      </span> <span style="font-style: italic;">Last changed: 12. January
+        2015</span></p>
   </body>
 </html>
