--- a/First steps.html
+++ b/First steps.html
@@ -286,7 +286,7 @@
           <td style="vertical-align: top;"><br>
           </td>
           <td style="vertical-align: top;"> <a
-              href="images/screenshot_main_window_0.2.0.png"><img
+              href="images/screenshot_main_window.png"><img
                 alt="Pyspread main window"
                 src="images/screenshot_main_window_preview.png"
                 style="border: 0px solid ; width: 200px; height: 154px;"></a><br>
